# AmputatorBot

./: .dockerignore  .editorconfig  .gitignore  CLAUDE.md  Dockerfile  PRIVACY.md  README.md  TERMS.md  docker-compose.yml  justfile  lefthook.yml  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/skills/amputatorbot-migration/: SKILL.md
.github/: dependabot.yml
.github/workflows/: backend.yml  devvit-app.yml  release.yml  security.yml  website.yml
amputatorbotcom/: forms.py
amputatorbotcom/static/: browserconfig.xml  main.js
amputatorbotcom/templates/: form.html  layout.html
archive/: README-archive.md  README-legacy.md  test_approval_status.py  test_subreddits.py
archive/amputatorbotcom/: forms.py
archive/amputatorbotcom/static/: main.css
backend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  deny.toml  justfile
backend/.sqlx/: query-05a00773362008451d38ec8f8ccb17eee148efc7cb7352c50f087802f439708b.json  query-0b4e76158850166e6a6cfa8e2fbecdbb5e07d90d8d6c6757f4549827b5e1d02c.json  query-1fc5e50b7ddf35572195f33bf83fa66e949f1e9a1f4dd4e3eed8721ecc99a9e3.json  query-4b48601868d42ad33656fe7ef6036ccd32a97cc7246f38e48f0dc799421ae18b.json  query-8e7f39bda2063c7562a0a68580b162631900767d30202fb48126409023c5e2af.json  query-bc311c94f699e27bfa7b57514cd87f3464c509d79ad08566e1243cb465f53510.json  query-c0ca678d1e7a3eb4493dd888fb2368e78687370e2a0c5f674289c4b65a0fa219.json  query-c51f460059cc2381e7b77928a1ab33008741ae7cff95b7ed385a6ba867fde702.json  query-fdb5cd07a5581710fb5e14f344c3f127947fafe17fdc036fdc4df4c594a2bdeb.json
backend/migrations/: 001_initial.sql  002_api_version.sql  003_confidence.sql
backend/res/: scalar.html
backend/src/: lib.rs  main.rs  reply.rs  state.rs  stats.rs
backend/src/canonical/: amp_detect.rs  database.rs  domain.rs  http.rs  http_fetcher.rs  mod.rs  page.rs  page_source.rs  pg_database.rs  resolve_opts.rs  resolver.rs  url_extract.rs
backend/src/canonical/methods/: bing_original.rs  canurl.rs  database.rs  google_js.rs  google_manual.rs  guess_and_check.rs  meta_redirect.rs  mod.rs  og_url.rs  rel.rs  schema_mainentity.rs  tco_pagetitle.rs
backend/src/models/: canonical.rs  canonical_type.rs  confidence_level.rs  entry_type.rs  link.rs  mod.rs  url_meta.rs
backend/src/readability/: mod.rs
backend/src/routes/: convert.rs  convert_engine.rs  convert_v2.rs  error.rs  legacy_convert.rs  mod.rs  query_parser.rs  stats.rs
backend/tests/: convert.rs  convert_v2.rs  legacy_convert.rs  models_serde.rs  parity.rs  pg_database.rs  snapshots.rs
backend/tests/fixtures/urlconversions/: 10000_conversions_unfiltered.csv  10000_conversions_with_canonical.csv  README.md  URLConversions_500_including_failed_and_false_positives.csv  URLConversions_7000_successful.csv
backend/tests/snapshots/: snapshots__snapshot_amputeestore_false_positive_short_circuits.snap  snapshots__snapshot_dead_end_amp_with_cached_origin_surfaces_amp_canonical.snap  snapshots__snapshot_depth_recursion_through_amp_chain.snap  snapshots__snapshot_fetch_failure_returns_empty_link.snap  snapshots__snapshot_meta_refresh_canonical.snap  snapshots__snapshot_multiple_canonical_signals_sorted_by_similarity.snap  snapshots__snapshot_non_amp_origin_returns_empty_link.snap  snapshots__snapshot_og_url_canonical.snap  snapshots__snapshot_rel_canonical.snap  snapshots__snapshot_schema_mainentity_canonical.snap
devvit-app/: .gitignore  README.md  biome.json  devvit.json  justfile  package.json  tsconfig.json  vite.config.ts
devvit-app/src/server/: index.ts  settings.test.ts  settings.ts
devvit-app/src/server/backend/: client.test.ts  client.ts  types.ts
devvit-app/src/server/core/: ampDetect.test.ts  ampDetect.ts  reply.test.ts  reply.ts  urlExtract.test.ts  urlExtract.ts
devvit-app/src/server/storage/: dedup.test.ts  dedup.ts
devvit-app/src/server/triggers/: handler.test.ts  handler.ts
docs/: amputatorbot-devvit-migration-plan-v6.md  amputatorbot-devvit-migration-plan-v7.md
helpers/: flashmessage_generator.py
infra/: .gitignore  README.md
infra/scaleway/: .terraform.lock.hcl  container.tf  database.tf  main.tf  outputs.tf  registry.tf  variables.tf  versions.tf
praw-python-archive/: README-legacy.md  check_comments.py  check_inbox.py  check_submissions.py  test_api_new.py
praw-python-archive/amputatorbotcom/: main.py  test_api.py
praw-python-archive/amputatorbotcom/static/: sitemap.xml
praw-python-archive/amputatorbotcom/templates/: layout.html
praw-python-archive/helpers/reddit/: reddit_dm_generator.py
website/: .gitignore  astro.config.ts  biome.json  justfile  package.json  postcss.config.mjs  tsconfig.json  vitest.config.ts
website/public/: manifest.json
website/src/components/: CanonicalMethodsSection.astro  CodeSnippet.astro  HeroSection.astro  NavLinks.astro  SiteFooter.astro  SiteHeader.astro  TechSection.astro  UkraineSection.astro  WhyAmpSection.astro
website/src/components/react/: ConvertedCount.tsx  ConverterForm.test.tsx  (+3 more)
website/src/layouts/: Layout.astro  MdxLayout.astro
website/src/lib/: highlight.ts
website/src/pages/: 404.astro  about.mdx  faq.mdx  index.astro
website/src/styles/: global.css
(+2 files in other folders)
